<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    tools:context=".OTPLoginActivity">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/back2"
        android:layout_marginTop="32dp"
        android:id="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/back_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        android:id="@+id/login_heading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_heading"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/login_field"
        android:layout_marginTop="90dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_gravity="center"
            android:layout_height="35dp"
            android:src="@mipmap/indianflg"
            android:contentDescription="@string/indian_flag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_code"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/phone_number_edit_text"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:textColor="@color/black"
            android:background="@drawable/verify_otp_field_background"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColorHint="@android:color/darker_gray"
            android:importantForAutofill="no" />

    </LinearLayout>

    <TextView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_with_google_prompt"
        android:textColor="#1273EB"
        android:layout_marginTop="20dp"
        android:background="@drawable/resend_otp_field_background"
        app:layout_constraintTop_toBottomOf="@id/login_field"
        app:layout_constraintLeft_toLeftOf="@id/login_field"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:drawableRightCompat="@drawable/next"
        app:drawableTint="#1273EB" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="104dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="@id/login_field"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/next_button"
        android:elevation="10sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/get_started_button_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_prompt"
            android:textColor="#fafafa"
            android:textSize="18sp"
            android:id="@+id/next_button_text"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"/>

        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/progress_bar"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>