<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="32dp"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:background="#37474f">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_card_detais"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/card_payment_heading"
        android:textColor="#fafafa"
        android:textSize="20sp"
        android:fontFamily="@font/exo2_bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_payment_heading"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/enter_card_number"
        android:textColor="#fafafa"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/exo2_regular"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#78909c"
        android:id="@+id/card_number_field"
        android:background="#263238"
        android:inputType="number"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_number_field"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/second_row"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:hint="@string/enter_expiry_date_mm_yy"
            android:textColor="#fafafa"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/exo2_regular"
            android:paddingTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="#78909c"
            android:id="@+id/card_expiry_date_field"
            android:background="#263238"
            android:inputType="date"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/enter_cvv"
            android:textColor="#fafafa"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/exo2_regular"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="#78909c"
            android:id="@+id/card_cvv_field"
            android:background="#263238"
            android:importantForAutofill="no"
            android:inputType="numberPassword" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/second_row"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_card_holder_s_name"
        android:textColor="#fafafa"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/exo2_regular"
        android:paddingTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#78909c"
        android:id="@+id/card_holder_name_field"
        android:background="#263238"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/card_holder_name_field"
        android:background="@drawable/confirm_button_background"
        android:text="@string/pay_now"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        android:id="@+id/pay_now_button"
        android:fontFamily="@font/exo2_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>