<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".GoogleOAuthResponseProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_you_hint"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppins"
        android:textSize="32sp"
        android:layout_marginTop="80dp"
        android:id="@+id/confirm_otp_heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"/>

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:id="@+id/profile_image_frame_layout"
        app:layout_constraintLeft_toLeftOf="@id/confirm_otp_heading"
        app:layout_constraintTop_toBottomOf="@id/confirm_otp_heading">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profile_image"
            android:src="@mipmap/avatar_dummy"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit"
            android:layout_gravity="bottom|right" />

    </FrameLayout>


    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:layout_width="match_parent"
        app:borderColor="#00000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/verify_otp_field_background"
        android:id="@+id/full_name_edit_text"
        app:layout_constraintTop_toBottomOf="@id/profile_image_frame_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="60dp">

        <EditText
            android:textColor="@android:color/black"
            android:id="@+id/full_name"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/full_name_hint"
            android:textColorHint="#a0a0a0"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:layout_width="match_parent"
        app:borderColor="#00000000"
        android:background="@drawable/verify_otp_field_background"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_edit_text"
        android:layout_height="60dp"
        android:id="@+id/email_edit_text"
        android:layout_marginTop="16dp">

        <EditText
            android:textColor="@android:color/black"
            android:id="@+id/email"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:textColorHint="#a0a0a0"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:id="@+id/contact_number"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_gravity="center"
            android:layout_height="35dp"
            android:src="@mipmap/indianflg"
            android:contentDescription="@string/indian_flag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_code"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"/>

        <EditText
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:id="@+id/phone_number"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:background="@drawable/verify_otp_field_background"
            android:textColorHint="#a0a0a0"
            android:importantForAutofill="no" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_continuing_i_confirm_that_i_have_read_and_agree_all_the_terms_and_conditions_and_privacy_policy"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintRight_toRightOf="@id/full_name_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/full_name_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="64dp"
        android:textSize="12sp"
        android:fontFamily="@font/poppins" />

    <FrameLayout
        android:id="@+id/next_button"
        android:elevation="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/get_started_button_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_prompt"
            android:textStyle="bold"
            android:id="@+id/next_text"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"/>

        <ProgressBar
            android:layout_width="20dp"
            android:id="@+id/progress_bar"
            android:layout_height="20dp"
            android:visibility="gone"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>