<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:background="#263238"
    tools:context=".PaymentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payment_method_text"
                android:text="@string/payment_method_prompt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:layout_marginTop="32dp"
                android:textColor="#fafafa"
                android:fontFamily="@font/exo2_extra_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debit_credit_card"
                app:layout_constraintTop_toBottomOf="@id/payment_method_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:id="@+id/debit_credit_card_text"
                android:fontFamily="@font/exo2_medium"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/debit_credit_card_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/debit_credit_card_details"
                android:layout_marginTop="16dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/payment_method_list_item_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="32dp"
                    android:textColor="#fafafa"
                    android:fontFamily="@font/exo2_medium"
                    android:text="@string/pay_using_a_credit_or_debit_card"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_plus"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="32dp"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallets"
                app:layout_constraintTop_toBottomOf="@id/debit_credit_card_details"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:id="@+id/wallet_text"
                android:fontFamily="@font/exo2_medium"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/wallet_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/wallet_items"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upi_methods"
                app:layout_constraintTop_toBottomOf="@id/wallet_items"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:id="@+id/upi_text"
                android:fontFamily="@font/exo2_medium"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/upi_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/upi_items"
                android:layout_marginTop="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/confirm_button_background"
        android:text="@string/book_ambulance_button_text"
        android:textSize="14sp"
        android:id="@+id/book_ambulance_button"
        android:fontFamily="@font/exo2_bold" />

</androidx.constraintlayout.widget.ConstraintLayout>